# xmr-stak-power

./: CMakeLists.txt  README.md  cli-miner.cpp  config.txt  donate-level.h  jconf.cpp  jext.h  jpsock.cpp  minethd.cpp  minethd.h
cmake/: Architecture.cmake
crypto/: aes_data.hpp  cryptonight.cpp  cryptonight.hpp  cryptonight_aesni.cpp  cryptonight_aesni.hpp  cryptonight_altivec.cpp  cryptonight_altivec.hpp  cryptonight_sparc.cpp  cryptonight_sparc.hpp  groestl.cpp  int-util.h  jh.c  jh.h  keccak.cpp  keccak.h  portability.hpp  skein.c  skein.h
test/: googletest_correct.cpp
